[package]
name = "orbis-unpkg"
description = "Library and command-line tool for inspecting and extracting PlayStation 4 PKG files."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file = "LICENSE.txt"
repository.workspace = true
readme = "README.md"
keywords = ["ps4", "pkg", "extractor", "orbis", "pfs"]
categories = ["filesystem", "parser-implementations"]

[lib]
name = "orbis_unpkg"
path = "src/lib.rs"

[[bin]]
name = "orbis-unpkg"
path = "src/main.rs"

[dependencies]
aes = "0.8"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
num-bigint-dig = { version = "0.8", default-features = false, features = ["u64_digit"] }
sha2 = { version = "0.10", default-features = false }
